ETD Release Notes
=================
Version 1.8.1 - September 2010 (enhancements)
* Add partnering agency to an ETD.

Deployment notes:
* Update partnering agencies:
- add this property to config.xml (place below <programs_pid>):
  <vocabularies_pid>emory-control:ETD-vocabulary</vocabularies_pid>
- 017-add-partnering_agencies_RSPH.php.php - before running this script, 
    make sure the pid "emory-control:ETD-vocabulary" exists in fedora.


Version 1.8 - September 2010 (enhancements)
* Collections config has been consolidated in schools.xml
* MySql database config file has been added
* A RSPH author can login to ETD site and successfully create and submit a record
* The program is now pre-populated for RSPH authors at time of submission
* RSPH administrators can view and interact with all RSPH records within his/her department and academic plan that have been submitted, reviewed, and approved
* Users of the ETD site can browse programs and see the RSPH documents by program
* RSPH authors will have their documents published with Grad School, Candler and Honors documents
* An admin or report viewer can download the CSV file reports using firefox and IE
* Xacml policy permissions have been refactored
* Mime-type detection has been refactored for PDF files

Deployment notes:
* Update fedora policies under FEDORA_HOME to branch:
- staging: https://svn.library.emory.edu/svn/fedora/repository-policies/branches/etd_1.8.x
- production: https://svn.library.emory.edu/svn/fedora/repository-policies/tags/?
* Add etdOwner to config
* Remove honors_collection section from config.xml
 * Remove collections section from config.xml
 * Add etd-db.xml as specified in etd-db.xml.example file
 * Run the following migrations / scripts
 * 015a-add-collection_program_owners.php - Change maintenance_account to use fedoraAdmin for this migration then change back to etdmaint
-  create_collections.php
-  015-add-rollins-programs.php